bluegreen/deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx-$RELEASE_ID
spec:
  replicas: 3
  template:
    metadata:
      labels:
        name: nginx
        version: "$RELEASE_ID"
    spec:
      containers: 
        - name: nginx
          image: nginx:1.11
          ports:
            - name: http
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata: 
  name: nginx$RELEASE_ID
  labels: 
    name: nginx$RELEASE_ID
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector: 
    name: nginx
    version: "$RELEASE_ID"
