bluegreen/ingress_root.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  labels:
    tag: $NAME
    release: 
    state: $STATE
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: $NAME$RELEASE_ID
          servicePort: 80
