bluegreen/ingress_test.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  labels:
    tag: $NAME
    release: "$PREV_RELEASE_ID"
    state: $STATE
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: $NAME$PREV_RELEASE_ID
          servicePort: 80
      - path: /test
        backend:
          serviceName: $NAME$RELEASE_ID
          servicePort: 80
